App-deployment-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-hw-service
spec:
  selector: 
    app: argocd-hw-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
