App-deployment-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-hw-ingress
spec:
  rules:
    - host: eso-integration-demo-helm-ns.aro-vpaas-dev.euw-hub02.azure.volvo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-hw-service
                port:
                  number: 5000
  # Uncomment the following section if you have a TLS certificate
  tls:
  - {}
